apps/anything-llm/overlays/dev/patch-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: anything-llm
spec:
  rules:
    - host: dev-anythingllm.192.168.250.215.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: anything-llm
                port:
                  number: 3001
  tls:
    - hosts:
        - dev-anythingllm.192.168.250.215.nip.io
      secretName: dev-anythingllm-tls
